--- a/mcp-server/mcp-server/mcp-server/mcp-server/package.json
+++ b/mcp-server/mcp-server/mcp-server/mcp-server/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "mcp-server",
-  "version": "1.0.0",
+  "name": "pulsepilot-mcp-server",
+  "version": "0.1.0",
   "main": "index.js",
   "scripts": {
     "start": "node index.js"
   },
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "ws": "^8.17.1"
   }
 }
