--- a/mcp-server/package.json
+++ b/mcp-server/package.json
@@ -1,7 +1,6 @@
 {
   "name": "pulsepilot-mcp-server",
   "version": "0.1.0",
-<<<<<<< HEAD
   "private": true,
   "type": "module",
   "scripts": {
@@ -10,29 +9,20 @@
     "start": "node dist/index.js"
   },
   "dependencies": {
-    "express": "^5.1.0",
-    "ws": "^8.18.3",
-    "zod": "^3.25.76"
+    "ws": "^8.17.1",
+    "zod": "^3.23.8",
+    "express": "^4.18.2"
   },
   "devDependencies": {
-    "@types/express": "^5.0.3",
-    "@types/node": "^20.19.13",
-    "@types/ws": "^8.18.1",
+    "@types/node": "^20.11.30",
+    "@types/ws": "^8.5.10",
+    "@types/express": "^4.17.21",
     "ts-node": "^10.9.2",
-    "typescript": "^5.9.2"
+    "typescript": "^5.4.5"
   },
-  "description": "",
   "main": "index.js",
+  "description": "",
   "keywords": [],
   "author": "",
   "license": "ISC"
-=======
-  "main": "index.js",
-  "scripts": {
-    "start": "node index.js"
-  },
-  "dependencies": {
-    "ws": "^8.17.1"
-  }
->>>>>>> c487ee42881640528d907991c9627b43760fe267
 }
