--- a/mcp-server/mcp-server/mcp-server/mcp-server/package.json
+++ b/mcp-server/mcp-server/mcp-server/mcp-server/package.json
@@ -1,12 +1,28 @@
 {
-  "name": "mcp-server",
-  "version": "1.0.0",
-  "main": "server.js",
+  "name": "pulsepilot-mcp-server",
+  "version": "0.1.0",
+  "private": true,
+  "type": "module",
   "scripts": {
-    "start": "node server.js"
+    "dev": "ts-node src/index.ts",
+    "build": "tsc -p .",
+    "start": "node dist/index.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "ws": "^8.13.0"
-  }
+    "ws": "^8.17.1",
+    "zod": "^3.23.8",
+    "express": "^4.18.2"
+  },
+  "devDependencies": {
+    "@types/node": "^20.11.30",
+    "@types/ws": "^8.5.10",
+    "@types/express": "^4.17.21",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.4.5"
+  },
+  "main": "index.js",
+  "description": "",
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
